# SELinuxCILSemantics

./: .gitignore  README.md  SELinuxCILSem.opam  dune  dune-project  log  out.temp  sesearchout
GeneratedTestCases/: out-1143.out  out-1151.out  out-1153.out  out-1193.out  out-1199.out  out-1200.out  out-1228.out  out-1247.out  out-1256.out  out-1286.out  out-1311.out  out-1334.out  out-1338.out  out-1346.out  out-1358.out  out-1424.out  out-1434.out  out-1452.out  out-1504.out  out-1515.out  out-1546.out  out-1555.out  out-1558.out  out-1620.out  out-1645.out  out-1743.out  out-1750.out  out-1765.out  out-1768.out  out-1780.out  out-1810.out  out-1835.out  out-1838.out  out-1876.out  out-1884.out  out-1888.out  out-1949.out  out-1977.out  out-1980.out  out-1982.out  (+142 more)
lib/: CILclass.ml  CILclass.mli  CILenv.ml  CILenv.mli  CILenvE.ml  CILenvE.mli  CILparser.mly  CILsemantics.ml  CILsemantics.mli  CILsemanticsE.ml  CILsemanticsE.mli  CILsyntax.ml  CILsyntax.mli  CILsyntaxE.ml  CILsyntaxE.mli  Utils.ml  dune
test/: Generate.ml  Generate.mli  dune  testCILSem.ml  testCILSemE.ml  testCILSemInt.ml  testCILSemIntE.ml  testCILSemRand.ml
test/real-world/: cilbase.cil  dssp5.cil  (+1 more)
testCases/: callglobalwhen.cil  double-copying2.cil  inheritandcallorder-simp.cil  inheritandcallorder.cil  inheritdouble.cil  inheritresolve.cil  inheritscopes.cil  inhertiinherit.cil  macrodefcaller.cil  macroname.cil  macroname2.cil  macronameglobal.cil  nomineiparenti.cil  occurcheck2.cil  occurcheck3.cil  out  parameterfrommacroitself-v3.cil  test12-var2.cil  test13.cil  test4.cil  test9.cil
(+31 files in other folders)
